--- a/css/main.css
+++ b/css/main.css
@@ -469,7 +469,15 @@ select {
     border-width: 1px 0;
     margin: 20px -20px;
     padding: 0 20px;
+    position: relative;
+}
 
+
+.services-choose .show-month-price{
+    position:absolute;
+    right:0;
+    top:13px;
+    padding-right:20px;
 }
 
 /*end-offer*/
