--- a/css/main.css
+++ b/css/main.css
@@ -28,14 +28,20 @@ h1, h2, h3, h4 {
     border-radius: 0;
     height: 0;
     border: 0;
-    border-top: 1px solid #000;
-    margin-top: 15px;
+    border-bottom: 1px solid #000;
+    padding-top: 15px;
+    background: transparent;
+
 }
 
 
 .ui-slider-range{
-    border-top: 1px solid #ccc !important;
-    top:-1px !important;
+    border-bottom: 1px solid #ccc !important;
+    border-radius: 0;
+    top:0px !important;
+    right:-3px !important;
+
+    background: transparent;
 
 }
 
@@ -51,7 +57,7 @@ h1, h2, h3, h4 {
 
     border-top: 15px solid #000;
     background: transparent;
-    top:-15px;
+    top:0;
 }
 
 
@@ -128,8 +134,13 @@ aside.menu ul {
 
 }
 
-aside.menu ul li {
+aside.menu ul li, aside.menu ul li.link a {
+    display: block;
     padding: 10px;
+}
+
+aside.menu ul li.link{
+    padding:0;
 }
 
 aside.menu ul li i {
@@ -138,14 +149,22 @@ aside.menu ul li i {
 }
 
 aside.menu ul li {
-    margin: 20px 0 40px 0;
+    margin: 20px 0 30px 0;
 }
 
 aside.menu ul li {
-    border-radius: 10px 0 0 10px;
+    /*border-radius: 10px 0 0 10px;*/
     position: relative;
     cursor: pointer;
+    background: #444;
 }
+
+aside.menu ul li a{
+    color:#fff;
+}
+
+
+
 
 aside.menu ul li:before, aside.menu ul li:after, aside.menu ul li i {
     display: block;
@@ -171,12 +190,37 @@ aside.menu ul li:before, aside.menu ul li:after {
 
 aside.menu ul li:before {
     top: -10px;
-    border-radius: 0 0 10px 0;
+   /* border-radius: 0 0 10px 0;*/
 }
 
 aside.menu ul li:after {
     bottom: -10px;
-    border-radius: 0 10px 0 0;
+    /*border-radius: 0 10px 0 0;*/
+}
+
+aside.menu ul li.offer{
+    padding:0;
+    font-size:12px;
+    line-height: 16px;
+    height: 50px;
+}
+
+aside.menu ul li.offer img{
+    height:50px !important;
+    padding:0 10px 0 0;
+    float:left;
+}
+
+
+aside.menu ul li.offer strong, aside.menu ul li.offer span{
+    display: block;
+    padding-right:25px;
+    text-align: right;
+}
+
+aside.menu ul li.offer span{
+    padding-right:0;
+
 }
 
 /*li.hover*/
@@ -192,13 +236,23 @@ aside.menu ul li:hover:before, aside.menu ul li:hover:after {
 /*li.active*/
 
 aside.menu ul li.active, aside.menu ul li.active i {
-    background: #fc0;
+    background: #fff;
     color: #333;
 }
 
 aside.menu ul li.active:before, aside.menu ul li.active:after {
     background: #252525;
 }
+
+
+
+aside.menu ul li .icon-remove{
+    position: absolute;
+    top:5px;
+    right:5px;
+
+}
+
 
 /*calculate-sum*/
 
@@ -209,6 +263,9 @@ aside.menu li.calculate-sum dt, aside.menu li.calculate-sum dd {
     margin: 0;
 }
 
+aside.menu li.calculate-sum span{
+    font-size:13px;
+}
 
 aside.menu li.calculate-sum dt{
     width:80px;
@@ -384,6 +441,7 @@ ul.row-fluid {
 
 .list {
     margin-bottom: 1em;
+    position:relative;
 }
 
 .list ul {
@@ -402,11 +460,46 @@ ul.row-fluid {
     background: rgba(255, 200, 0, 0.25);
 }
 
+.list .arrow-prev, .list .arrow-next{
+    display:block;
+    background:blue;
+    width:20px;
+    height:10px;
+    position: absolute;
+    left:50%;
+    margin-left:-10px;
+
+}
+
+.list .arrow-prev{
+    top:-10px;
+}
+
+.list .arrow-next{
+    bottom:-10px;
+
+}
+
+
+.upgrades .list{
+    margin-top:1em;
+
+}
+
 
 .upgrades .list li{
     margin-bottom:1em;
 }
 
+.upgrades .list li:last-child{
+    margin-bottom: 0;
+}
+
+
+.upgrades .list{
+    min-height: 184px;
+    padding:1em 0;
+}
 
 h4 {
     font-size: 1.2em;
@@ -458,6 +551,26 @@ select {
     padding: 10px 0;
     font-size:1em;
     margin-top:0;
+}
+
+
+.credit-offers .arrow-prev, .credit-offers .arrow-next{
+    width:10px;
+    height:20px;
+    left:auto;
+    bottom:auto;
+    top:50%;
+    margin-top:-10px;
+
+}
+
+.credit-offers .arrow-prev{
+    left:-10px;
+}
+
+.credit-offers .arrow-next{
+    right:-10px;
+
 }
 
 
@@ -536,6 +649,11 @@ select {
 
 }
 
+.service-list div ul li.header a{
+    vertical-align: baseline;
+    margin-left:5px;
+}
+
 .service-list div ul li .price{
     right:0;
     top:0;
@@ -593,6 +711,13 @@ select {
 
 }
 
+.end-offer tr.collapsed:before{
+    content: "▼";
+    display: block;
+    left:-20px;
+
+}
+
 
 /*payment-calculation*/
 .payment-calculation{
@@ -605,6 +730,25 @@ select {
     left:210px;
     padding:20px;
     width:300px;
+
+
+    -webkit-box-shadow: 7px 7px 18px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    7px 7px 18px rgba(50, 50, 50, 0.75);
+    box-shadow:         7px 7px 18px rgba(50, 50, 50, 0.75);
+}
+
+
+.payment-calculation:before{
+    display:block;
+    content:'.';
+    position: fixed;
+    top:0;
+    bottom:0;
+    right:0;
+    left:210px;
+    background:rgba(0,0,0,0.2);
+    z-index: 5;
+
 }
 
 .payment-calculation>div{
@@ -612,4 +756,124 @@ select {
     margin-bottom:1em;
     float:left;
     width:100%;
+}
+
+
+.modal .input{
+    position:relative;
+    font-size:20px;
+}
+
+.modal .input, .modal .input label{
+    font-size:20px;
+    line-height: 35px;
+}
+
+
+.modal .input label{
+    position: absolute;
+
+    top:0;
+}
+
+.modal{
+    width:400px;
+    margin-left:-200px;
+    padding:30px;
+}
+
+.modal .input input, .modal .input span{
+    margin-left:240px;
+    text-align: right;
+    display:block;
+    width:100px
+
+}
+
+.modal .input label:last-child{
+    right:0;
+
+}
+
+
+.modal .input input{
+
+
+}
+
+
+
+
+
+
+
+.offers-comparison{
+    /*width:100%;*/
+}
+
+
+.offers-comparison th, .offers-comparison td{
+    vertical-align:top;
+}
+
+.offers-comparison th{
+    text-align:left;
+    font-weight:normal;
+    font-size:0.8em;
+
+
+
+}
+.offers-comparison tr.group,
+.offers-comparison tr.group th,
+.offers-comparison tr.group td{
+    background:#fff;
+
+}
+
+.offers-comparison tr.group th{
+    font-weight:bold;
+
+}
+
+.offers-comparison tr.group td{
+    text-align:left;
+}
+
+
+.offers-comparison th, .offers-comparison td{
+    width:293px;
+    border-bottom:1px solid #ccc;
+    padding:3px 5px;
+    background:rgba(255,255,255,0.7);
+}
+
+
+
+.offers-comparison tr:last-child>*{
+    border-bottom:0;
+    background:transparent;
+}
+
+.offers-comparison td{
+    text-align:center;
+
+}
+
+.offers-comparison .offer-name td{
+    font-size:1.2em;
+
+}
+
+.offers-comparison .delete-offer{
+    display: inline-block;
+    width:16px;
+    height:16px;
+    background: url(../img/remove.png) no-repeat 0 0;
+    margin-left:7px;
+    margin-top:-1px;
+}
+
+.offers-comparison .delete-offer:hover{
+    background-position:0 bottom;
 }
