--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ aside.menu {
     position: fixed;
     top: 0;
     left: 0;
-    bottom: 0;
+    min-height: 100%;
     padding: 0;
 
     color: #eee;
@@ -140,6 +140,7 @@ aside.menu ul {
 aside.menu ul li, aside.menu ul li.link a {
     display: block;
     padding: 10px;
+    text-align: center;
 }
 
 aside.menu ul li.link{
