--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,11 @@ aside.menu ul li a{
 }
 
 
+aside.menu ul li:hover a{
+    text-decoration: none!important;
+
+}
+
 
 
 aside.menu ul li:before, aside.menu ul li:after, aside.menu ul li i {
@@ -385,6 +390,7 @@ header {
 
 .price-line * {
     display: inline-block;
+    vertical-align: middle;
 }
 
 .price-line .price {
@@ -553,6 +559,8 @@ select {
     text-align: center;
     font-size:0.7em;
     margin-top:6px;
+
+    cursor: pointer;
 }
 
 .credit-offers>div.selected{
@@ -743,7 +751,7 @@ select {
 }
 
 .modal .input, .modal .input label{
-    font-size:20px;
+    font-size:18px;
     line-height: 35px;
 }
 
@@ -761,7 +769,7 @@ select {
 }
 
 .modal .input input, .modal .input span{
-    margin-left:240px;
+    margin-left:225px;
     text-align: right;
     display:block;
     width:100px
