--- a/css/main.css
+++ b/css/main.css
@@ -225,7 +225,7 @@ aside.menu ul li.offer img{
 aside.menu ul li.offer strong, aside.menu ul li.offer span{
     display: block;
     padding-right:25px;
-    text-align: right;
+    text-align: left;
 }
 
 aside.menu ul li.offer span{
@@ -583,7 +583,7 @@ select {
     border: 1px solid #AEAEAE;
     padding: 7px 0;
     text-align: center;
-    font-size:0.7em;
+    /*font-size:0.7em;*/
     margin-top:6px;
 
     cursor: pointer;
@@ -591,9 +591,9 @@ select {
 
 .credit-offers>div.selected{
     background: #FFF2BF;
-    padding: 10px 0;
+    /*padding: 10px 0;
     font-size:1em;
-    margin-top:0;
+    margin-top:0; */
 }
 
 .credit-offers>div h4{
@@ -921,4 +921,10 @@ select {
 
 .payment-calculation div.input-ip .ui-slider {
     margin-right: 125px;
+}
+
+
+
+.tooltip-inner {
+    white-space:pre-wrap;
 }
