--- a/css/main.css
+++ b/css/main.css
@@ -764,13 +764,14 @@ select {
     font-style: normal;
 }
 
-.end-offer table tr.space-top td {
+.end-offer table tr.collapsible td {
     padding-top: 1.33em;
+    cursor: pointer;
 
 }
 
 
-.end-offer tr.collapsed td:first-child:before, .end-offer tr.expanded td:first-child:before{
+.end-offer tr.collapsible td:first-child:before{
     content: "▼";
     width:20px;
     margin-left:-20px;
