--- a/css/main.css
+++ b/css/main.css
@@ -736,9 +736,9 @@ select {
 
 .services-choose table td:nth-child(1){width:30%;}
 .services-choose table td:nth-child(2){width:25%;padding-right:1em}
-.services-choose table td:nth-child(3){width:10%;}
-.services-choose table td:nth-child(4){width:15%;}
-.services-choose table td:nth-child(5){width:20%;}
+.services-choose table td:nth-child(3){width:10%;min-width: 90px;}
+.services-choose table td:nth-child(4){width:15%;min-width: 110px;}
+.services-choose table td:nth-child(5){width:20%;min-width: 115px;}
 
 
 
