--- a/css/main.css
+++ b/css/main.css
@@ -673,13 +673,15 @@ select {
 
 /*services-choose*/
 .services-choose {
-    background: #FFF2BF;
-    border: 1px solid #AEAEAE;
-    border-width: 1px 0;
-    margin: 20px -20px;
-    padding: 0 20px;
     position: relative;
+
 }
+
+
+.services-choose table {
+    margin: 10px -20px;
+}
+
 
 
 .services-choose .show-month-price{
@@ -690,7 +692,7 @@ select {
 }
 
 .services-choose table{
-    width:100%;
+    width:760px;
     margin-bottom:0.5em;
 
 }
@@ -745,6 +747,33 @@ select {
 .services-choose table tr:last-child{
     font-style: italic;
 }
+
+
+
+
+.services-choose table tr>*:first-child{padding-left:20px;}
+.services-choose table tr>*:last-child{padding-right:20px;}
+
+
+.services-choose table tr.service{
+    background: #FFF2BF;
+}
+
+
+.services-choose table tr:nth-child(2) td{
+    padding-top:0.5em;
+}
+
+.services-choose table tr:first-child, .services-choose table tr:last-child{
+    border: 1px solid #AEAEAE;
+    border-width: 0 0 1px 0;
+}
+
+
+.services-choose table tr:last-child{
+    border-width: 1px 0 0 0;
+}
+
 
 /**/
 
